--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-elements": "^3.4.2",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "expo-cli": "^5.5.1"
-  },
-  "private": true
+  }
 }
