--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build": "expo build:web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
@@ -18,6 +22,9 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "yup": "^0.32.11"
   },
