--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "expo build:web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
