--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,12 @@
     "production": {}
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "appleId": "shantisteingagnon@gmail.com",
+        "ascAppId": "1636626948",
+        "appleTeamId": "4T87R2M55M"
+      }
+    }
   }
 }
