--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-bouncy-checkbox": "^3.0.2",
     "react-native-elements": "^3.4.2",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~2.2.1",
