--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
+    "expo-print": "^11.2.0",
+    "expo-sharing": "^10.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "formik": "^2.2.9",
@@ -31,10 +33,11 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
+    "react-native-webview": "^11.23.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "expo-cli": "^5.5.1"
+    "expo-cli": "^4.3.0"
   }
 }
