--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "heli-rigger-pro",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "build": "expo build:web"
@@ -18,8 +17,10 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
+    "expo-mail-composer": "~11.2.0",
     "expo-print": "^11.2.0",
-    "expo-sharing": "^10.2.0",
+    "expo-sharing": "~10.2.0",
+    "expo-sms": "~10.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "formik": "^2.2.9",
@@ -33,8 +34,10 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
-    "react-native-webview": "^11.23.0",
-    "yup": "^0.32.11"
+    "react-native-webview": "11.18.1",
+    "yup": "^0.32.11",
+    "expo-file-system": "~14.0.0",
+    "expo-splash-screen": "~0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
