--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
+    "expo-file-system": "~14.0.0",
     "expo-mail-composer": "~11.2.0",
     "expo-print": "^11.2.0",
     "expo-sharing": "~10.2.0",
     "expo-sms": "~10.2.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
+    "expo-updates": "~0.13.4",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -35,9 +37,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-native-webview": "11.18.1",
-    "yup": "^0.32.11",
-    "expo-file-system": "~14.0.0",
-    "expo-splash-screen": "~0.15.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
